--- a/page-single.html
+++ b/page-single.html
@@ -8,7 +8,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/images/assets/banner/third_logo.png"
+      href="third_logo.png"
     />
     <link rel="stylesheet" href="/Script/style.css" />
     <link
@@ -113,9 +113,9 @@
               <div class="left flexitem">
                 <div class="logo">
                   <!-- <a href="/"><span class="circle"></span>Eco - Shopzone</a> -->
-                  <a href="/HTML/index.html"
+                  <a href="index.html"
                     ><img
-                      src="/images/assets/banner/main_logo.png"
+                      src="main_logo.png"
                       class="object-cover"
                       style="width: 350px"
                       alt=""
@@ -182,7 +182,7 @@
                                   <div class="thumbnail object-cover">
                                     <a href="#">
                                       <img
-                                        src="/images/assets/products/apparel4.jpg"
+                                        src="apparel4.jpg"
                                         alt=""
                                         srcset=""
                                       />
@@ -252,7 +252,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/images/assets/products/home2.jpg"
+                                    src="home2.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -274,7 +274,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home3.jpg"
+                                    src="home3.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -298,7 +298,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home4.jpg"
+                                    src="home4.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -318,7 +318,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home5.jpg"
+                                    src="home5.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -521,36 +521,36 @@
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/shoe1.jpg"
+                                href="shoe1.jpg"
                                 ><img
-                                  src="/images/assets/products/shoe1.jpg"
+                                  src="shoe1.jpg"
                                   alt=""
                               /></a>
                             </div>
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/shoe1-1.jpg"
+                                href="shoe1-1.jpg"
                                 ><img
-                                  src="/images/assets/products/shoe1-1.jpg"
+                                  src="shoe1-1.jpg"
                                   alt=""
                               /></a>
                             </div>
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/shoe1-2.jpg"
+                                href="shoe1-2.jpg"
                                 ><img
-                                  src="/images/assets/products/shoe1-2.jpg"
+                                  src="shoe1-2.jpg"
                                   alt=""
                               /></a>
                             </div>
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/shoe1-3.jpg"
+                                href="shoe1-3.jpg"
                                 ><img
-                                  src="/images/assets/products/shoe1-3.jpg"
+                                  src="shoe1-3.jpg"
                                   alt=""
                               /></a>
                             </div>
@@ -565,25 +565,25 @@
                           >
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/shoe1.jpg"
+                                src="shoe1.jpg"
                                 alt=""
                               />
                             </li>
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/shoe1-1.jpg"
+                                src="shoe1-1.jpg"
                                 alt=""
                               />
                             </li>
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/shoe1-2.jpg"
+                                src="shoe1-2.jpg"
                                 alt=""
                               />
                             </li>
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/shoe1-3.jpg"
+                                src="shoe1-3.jpg"
                                 alt=""
                               />
                             </li>
@@ -954,7 +954,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel1.jpg"
+                            src="apparel1.jpg"
                             alt=""
                           />
                         </a>
@@ -1019,7 +1019,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel2.jpg"
+                            src="apparel2.jpg"
                             alt=""
                           />
                         </a>
@@ -1086,7 +1086,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel3.jpg"
+                            src="apparel3.jpg"
                             alt=""
                           />
                         </a>
@@ -1151,7 +1151,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel4.jpg"
+                            src="apparel4.jpg"
                             alt=""
                           />
                         </a>
@@ -1215,7 +1215,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe1.jpg" alt="" />
+                          <img src="shoe1.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1279,7 +1279,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe2.jpg" alt="" />
+                          <img src="shoe2.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1343,7 +1343,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe3.jpg" alt="" />
+                          <img src="shoe3.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1405,7 +1405,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe4.jpg" alt="" />
+                          <img src="shoe4.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1476,7 +1476,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/banner1.jpg" alt="" />
+                        <img src="banner1.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1493,7 +1493,7 @@
                   <div class="row">
                     <div class="item get-gray">
                       <div class="image">
-                        <img src="/images/assets/banner/banner2.jpg" alt="" />
+                        <img src="banner2.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1511,7 +1511,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat1.jpg" alt="" />
+                        <img src="procat1.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>LLAVES TUERCA</h4>
@@ -1534,7 +1534,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat2.jpg" alt="" />
+                        <img src="procat2.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Medidor</h4>
@@ -1558,7 +1558,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat3.jpg" alt="" />
+                        <img src="procat3.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Multímetro Automotriz</h4>
@@ -1682,7 +1682,7 @@
                   <!-- <a href="#"><span class="circle"></span>Eco - Shopzone</a> -->
                   <a href="#"
                     ><img
-                      src="/images/assets/banner/second_logo.png"
+                      src="second_logo.png"
                       style="width: 400px"
                       alt=""
                   /></a>
@@ -1711,7 +1711,7 @@
             <p class="mini-text">
               Hecho por
               <img
-                src="/images/assets/banner/heart.png"
+                src="heart.png"
                 style="width: 16px"
                 alt=""
               />
@@ -1782,7 +1782,7 @@
       <div id="modal" class="modal">
         <div class="content flexcol">
           <div class="image object-cover">
-            <img src="/images/assets/products/apparel4.jpg" alt="" />
+            <img src="apparel4.jpg" alt="" />
           </div>
           <h2>Get the latest deals and coupons</h2>
           <p class="mobile-hide">
