--- a/page-category.html
+++ b/page-category.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Certijac | Certijac</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/images/assets/banner/third_logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="third_logo.png" />
     <link rel="stylesheet" href="/Script/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -93,7 +93,7 @@
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left flexitem">
                             <div class="logo">
-                                <a href="/HTML/index.html"><img src="/images/assets/banner/main_logo.png"
+                                <a href="index.html"><img src="main_logo.png"
                                         class="object-cover" style="width: 350px;" alt=""></a>
                                 <!-- <a href="#"><img src="/images/assets/banner/Main_Icon.png" style="width: 50%;" alt=""></a> -->
                             </div>
@@ -156,7 +156,7 @@
                                               <div class="thumbnail object-cover">
                                                 <a href="#">
                                                   <img
-                                                    src="/images/assets/products/apparel4.jpg"
+                                                    src="apparel4.jpg"
                                                     alt=""
                                                     srcset=""
                                                   />
@@ -222,7 +222,7 @@
                                                 <div class="thumbnail object-cover">
                                                   <a href="#"
                                                     ><img
-                                                      src="/images/assets/products/home2.jpg"
+                                                      src="home2.jpg"
                                                       alt=""
                                                   /></a>
                                                 </div>
@@ -244,7 +244,7 @@
                                                 <div class="thumbnail object-cover">
                                                   <a href="#"
                                                     ><img
-                                                      src="/Images/assets/products/home3.jpg"
+                                                      src="home3.jpg"
                                                       alt=""
                                                   /></a>
                                                 </div>
@@ -268,7 +268,7 @@
                                                 <div class="thumbnail object-cover">
                                                   <a href="#"
                                                     ><img
-                                                      src="/Images/assets/products/home4.jpg"
+                                                      src="home4.jpg"
                                                       alt=""
                                                   /></a>
                                                 </div>
@@ -288,7 +288,7 @@
                                                 <div class="thumbnail object-cover">
                                                   <a href="#"
                                                     ><img
-                                                      src="/Images/assets/products/home5.jpg"
+                                                      src="home5.jpg"
                                                       alt=""
                                                   /></a>
                                                 </div>
@@ -709,8 +709,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/apparel1.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="apparel1.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -740,8 +740,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/apparel2.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="apparel2.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -779,8 +779,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/apparel3.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="apparel3.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -817,8 +817,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/apparel4.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="apparel4.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -836,7 +836,7 @@
                                                     <div class="stars"></div>
                                                     <span class="mini-text">(10)</span>
                                                 </div>
-                                                <h3 class="main-links"><a href="/html/page-single.html">Servicio de mantenimiento</a>
+                                                <h3 class="main-links"><a href="page-single.html">Servicio de mantenimiento</a>
                                                 </h3>
                                                 <div class="price">
                                                     <span class="current">S/.118.90</span>
@@ -855,8 +855,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/shoe1.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="shoe1.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -893,8 +893,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/shoe2.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="shoe2.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -931,8 +931,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/shoe3.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="shoe3.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -969,8 +969,8 @@
                                         <div class="item">
                                             <div class="media">
                                                 <div class="thumbnail object-cover">
-                                                    <a href="/html/page-single.html">
-                                                        <img src="/images/assets/products/shoe4.jpg" alt="">
+                                                    <a href="page-single.html">
+                                                        <img src="shoe4.jpg" alt="">
                                                     </a>
                                                 </div>
                                                 <div class="hoverable">
@@ -1025,7 +1025,7 @@
                 <div class="row">
                   <div class="item">
                     <div class="image">
-                      <img src="/images/assets/banner/banner1.jpg" alt="" />
+                      <img src="banner1.jpg" alt="" />
                     </div>
                     <div class="text-content flexcol">
                       <h4>¡Venta brutal!</h4>
@@ -1042,7 +1042,7 @@
                 <div class="row">
                   <div class="item get-gray">
                     <div class="image">
-                      <img src="/images/assets/banner/banner2.jpg" alt="" />
+                      <img src="banner2.jpg" alt="" />
                     </div>
                     <div class="text-content flexcol">
                       <h4>¡Venta brutal!</h4>
@@ -1060,7 +1060,7 @@
                 <div class="row">
                   <div class="item">
                     <div class="image">
-                      <img src="/images/assets/banner/procat1.jpg" alt="" />
+                      <img src="procat1.jpg" alt="" />
                     </div>
                     <div class="content mini-links">
                       <h4>LLAVES TUERCA</h4>
@@ -1083,7 +1083,7 @@
                 <div class="row">
                   <div class="item">
                     <div class="image">
-                      <img src="/images/assets/banner/procat2.jpg" alt="" />
+                      <img src="procat2.jpg" alt="" />
                     </div>
                     <div class="content mini-links">
                       <h4>Medidor</h4>
@@ -1107,7 +1107,7 @@
                 <div class="row">
                   <div class="item">
                     <div class="image">
-                      <img src="/images/assets/banner/procat3.jpg" alt="" />
+                      <img src="procat3.jpg" alt="" />
                     </div>
                     <div class="content mini-links">
                       <h4>Multímetro Automotriz</h4>
@@ -1229,7 +1229,7 @@
                     <div class="flexcol">
                         <div class="logo">
                             <!-- <a href="#"><span class="circle"></span>Eco - Shopzone</a> -->
-                            <a href="#"><img src="/images/assets/banner/second_logo.png" style="width: 400px;"
+                            <a href="#"><img src="second_logo.png" style="width: 400px;"
                                     alt=""></a>
                         </div>
                         <div class="socials">
@@ -1243,7 +1243,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="mini-text">Hecho por <img src="/images/assets/banner/heart.png" style="width:16px" alt=""> Duv <i class="ri-copyright-line"></i> 2024 Certijac - TiendaVirtual</p>
+                <p class="mini-text">Hecho por <img src="heart.png" style="width:16px" alt=""> Duv <i class="ri-copyright-line"></i> 2024 Certijac - TiendaVirtual</p>
             </div>
         </div>
     </footer>
@@ -1307,7 +1307,7 @@
     <div id="modal" class="modal">
         <div class="content flexcol">
             <div class="image object-cover">
-                <img src="/images/assets/products/apparel4.jpg" alt="">
+                <img src="apparel4.jpg" alt="">
             </div>
             <h2>Get the latest deals and coupons</h2>
             <p class="mobile-hide">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, veniam at
