--- a/page-single.html
+++ b/page-single.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="third_logo.png"
     />
-    <link rel="stylesheet" href="/Script/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
